--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@nuxt/image": "^1.10.0",
     "@nuxtjs/strapi": "^2.1.1",
     "nuxt": "^3.17.6",
+    "nuxt-toast": "^1.1.4",
+    "reka-ui": "^2.3.2",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
